# LechemBriocheWM

./: CMakeLists.txt  compile_commands.json
.cache/clangd/index/: main.cpp.10A1AF590BA5EB38.idx
src/: atoms.h  event_handler.cpp  event_handler.h  event_handler_builder.cpp  event_handler_builder.h  input_handler.h  layout_type.h  main.cpp  monitor.h  monitor_manager.h  window.h  window_manager.cpp  window_manager.h  wm_event_handlers.cpp  x_event_handler.h
